edited dish_paper, added some dish plots, put placeholder using empty.jpg for figures not ready

--- a/construction_journal.tex
+++ b/construction_journal.tex
@@ -33,8 +33,7 @@ As we started building, there are few things to note, such as distances, heights
 \begin{enumerate}
     \item{12 spokes + 12 supporting spars, not 16 as we previously designed with the 1st hub at HFA (vol. I)}
     \item{sleeves length is 15'' x 24 out of 2.5'' PVC}
-    \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36'', see Equation \ref{
-launchangle}}
+    \item{Hub launch angle is 2.86 $^{\circ}$ using 18'' and 36'', see Equation \ref{launchangle}}
     \item{gave up the original supporting telephone pole design, now employed a
     equilateral traingle design; pole to pole distance : $14.6$m = $574.8$'' = $47.9$',
     pole to center distance: $8.43$m = $331.9$'' =  $27.66$'}
