--- a/hera_dish.tex
+++ b/hera_dish.tex
@@ -83,36 +83,71 @@
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{}
+	\includegraphics[width =\textwidth]{empty}
 	\caption{THIS FIGURE SHOWS THE ANALYSIS ON PARABOLA
 \label{Fig:} }
 	\end{center}
 \end{figure}
 
 
-\subsection{faceting (rms deviation from parabaloid)}
+\subsection{faceting}
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{}
+	\includegraphics[width =\textwidth]{empty}
 	\caption{THIS FIGURE SHOWS THE PHOTGRAMMRY ANALYSIS 
 \label{Fig:} }
 	\end{center}
 \end{figure}
 
+\subsection{sheiding}
+The panels across the dish surface are made out of 6 different dimensions of galvanized wire cloth $\frac{1}{4}$"; employing different dimensions at different heights to reduce the surface bumps produced during installation.
+
+\subsection{splash cone}
+\begin{figure}[H]
+	\begin{center}
+	\includegraphics[width =\textwidth]{empty}
+	\caption{THIS FIGURE SHOWS THE SPLASH CONE STRUCTURE
+\label{Fig:} }
+	\end{center}
+\end{figure}
+
+\subsection{hub}
+The central hub has an overall diameter of 37", the inner sono tube has an interior diamater of 18", the outer sono tube has an interior diameter of 36". The launch angle of the spar sleeves is $+2.86^{\circ}$ from the inner sono tube to the outer sono tube, the supporting sleeves (botton sleeves) do not have any launch angles.
+
+
+\subsection {feed suspension}
+The feed suspesnsion mechanism consists of a back plane made out of wire cloth and $\frac{3}{4}$" schedule 40 white PVCs bolted on a metal structure, and a mast from the metal structure connects the dipole feed to the back screen. The whole feed structure is suspended above the hub by attaching kevlar wires from the three telephone poles to the back of the metal structure. 
+
+Each telephone pole has a reel with kelvar ropes wrapped, adjustments to feed height can be made by cranking the reels.
+
+
+\subsection{material, PVC selection}
+The dish structure is made out of schedule 40, white PVCs to minimize the bending effect under sunlight exposure; PVCs are subject to thermal contraction and expansion with a linear thermal coefficient of $50.4\times10^{-6}\ \frac{m}{m^{\circ}C}$.
+
 
 \begin{itemize}
 \item bent pipes as approximation to parabola 
-\item faceting (rms deviation from parabaloid)  
-\item shielding (screens)
+\item faceting
+\item shielding
 \item splash cone
-\item hub --> see technical doc
+\item hub 
 \item feed suspension (feed with mast, back screen by kevlar wire)
-\item materials, PVC selection -> construction_journal.tex
+\item materials, PVC selection 
 \item design lifetime (wood, PVC)
 \end{itemize}
 
 \section{Simulated Performance}
 \label{sec:sim}
+
+\subsection{Beam Pattern}
+
+\begin{figure}[H]
+	\begin{center}
+	\includegraphics[width =\textwidth]{./dish_plots/Beampatterns_cone}
+	\caption{THIS FIGURE SHOWS THE BEAM PATTERN 
+\label{Fig:} }
+	\end{center}
+\end{figure}
 
 \begin{itemize}
 \item beam pattern
@@ -128,61 +163,56 @@
 \end{itemize}
 
 
-
-
-
 \section{Reflectometry Test Setup}
 \label{sec:reflect}
-During the contruction process for the HERA prototype, we use TDR to verify the reflections on the dish due to impedance mistmatch between the feed electronics and the sky signal match our theoretical expection in delay domain. The feed impedance from the VNA and cable is 50 $\Omega\times4$(4:1 balun at each dipole)  and the free space $120\pi\Omega$. TDR works by showing the impedance mismatch locations as time by measuring the reflected signal to the incident signal. Each polarization is fed into one port connected to the VNA which provides a frequency swept signal and inverse Fourier transform is then performed. 
+During the contruction process for the HERA prototype, we use Time Domain reflectometry(TDR) to measure the reflections on the dish as a function of time due to impedance mistmatch between the feed electronics and the sky signal. The feed characteristic impedance from the VNA and cable is 50 $\Omega\times4 $(4:1 passive balun at each dipole) and that of the free space $120\pi\Omega$. Each polarization is fed into one port connected to the VNA which provides a frequency swept signal and inverse Fourier transform is then performed.  In this prototype, the focal length is $4.5$m, thus for 2 reflections, i.e. 4 crossings attenuation is 59.0ns in time domain.
 
-In this prototype, the focal length is $4.5$m, thus for 2 reflections, i.e. 4 crossing attenuation is 59.0ns in time domain.
 
 \subsection{Choice of Hardware}
-The dipole feed element consists of the PAPER feed, a mating board, one 4:1 balun for each polarization, 50$\Omega$ LMR400 cables of length 10m where the singal attenuation over 10m is ~ 0.5dB @ 150MHz. 
-The cables are connected to the two ports of an Agilent VNA ES8753 for reflectometry measurements. 401 data samples are taken from 50MHz to 1000MHz and gives a time resolution of 1.05ns, each set of data are average of 16 measurements for higher signal-to-noise ratio.
+The dipole feed element consists of the PAPER feed, a mating board, one 4:1 passive balun for each polarization, 50$\Omega$ LMR400 cables of length 10m where the singal attenuation over 10m is ~ 0.5dB at 150MHz. 
+The cables are connected to the two ports of an Agilent VNA ES8753 for reflectometry measurements. 
 
-Later in May 2014, WORKING ON....
-the mating board, baluns are replaced by the 75$\Omega$ PAPER baluns and receiver, output $50\Omega$. 
-ANY specs HERE?????
 
 \subsection{Calibration of VNA}
-Calibration is performed prior to taking measurements to eliminate the effects caused by cables and connectors. After calibration, the reference plane is moved to the tips of the cables with zero phase, loss and mistmatch such that the measurements are only showing the effects of the feed element. The full two port calibration is done by attaching calibration standards (Short, Open, Load, and Through) to the end of the $50\Omega$cables, the VNA calculates the correction coefficients by calibrating out at the calibration standards' impedances that are applied subsequently to each measurements with the feed connected. 
-
+Calibration is performed prior to taking measurements to eliminate the effects caused by cables and connectors. Performing calibration shifts the reference plane to the SMA connectors of the cables that are connecting the baluns with zero phase, zero loss and zero mistmatch, the measurements taken are showing only the effects of the feed and baluns under different configurations. The full two port calibration is done by attaching the calibration standards (Short, Open, Load, and Through) to the end of the $50\Omega$ cables, the VNA calculates the correction coefficients by calibrating out at the calibration standards' impedances and applies the coefficients subsequently to each measurements.
 
 \subsection{Feed Height Test}
-S11 S22 taken at heights: $67"$, $10'3.5"$, $14'0.5"$ above the dish.
-See configurations and Delay Spectrum for Configurations under result section for images
+The feed height test is carried out at three different heights above the dish: $67"$, $10'3.5"$, and $14'0.5"$.
+See Delay Spectrum for Configurations under result section for images
 
 
 \subsection{Configurations}
+The measurements are taken with 401 data samples between 50MHz to 1000MHz, giving a time resolution of 1.05ns; each set of data is averaged by 16 measurements for higher SNR. 
+
+
+
+
+
+
+
+
+
+(SELF NOTE)April 16
+@ 14'3" 
+$no_cone1 $= containing data taken without cone with 1 metal sheet
+@14'6"
+set3- set4: measuremnets with cone, 1 metal sheet covering the entrance to the dish, covering panel A
+
+
+
 May 5th stuff
 @ height 14' 6"
-mountain bumps ~ 60' - 80'
-
 Dish without cone, with screen
 set1- set2: measurements without cone, 2 metal sheets covering the entrace to the dish, covering panel A, B
 set5- set6: measurements with cone, 2 metal sheets covering the entrance to the dish, covering panel A, B
 
-April 16
-@ 14'3" 
-no_cone1 = containing data taken without cone with 1 metal sheet
-@14'6"
-set3- set4: measuremnets with cone, 1 metal sheet covering the entrance to the dish, covering panel A
-
-dish different heights
-Mar 28
-h1 = 67"
-h2 = 10'3.5"
-h3 = 14'0.5"
-
-
 \subsection{Window Functions}
-
+To deal with real-life situations of a finite bandwidth which results in spectral leakage in time domain,  the Kasier-Bessel window is applied to the frequency domain data prior to the inverse Fourier transform in order to increase the dynamic range of the measurements in time domain; the disadvantage however, is the widening of space between data points.
 
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{}
+	\includegraphics[width =\textwidth]{empty}
 	\caption{PUT FIGURE SHOW WINDOW 
 \label{Fig:} }
 	\end{center}
@@ -205,14 +235,14 @@ Using TDR
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{reflectometry_plots/configcompare}
+	\includegraphics[width =\textwidth]{./reflectometry_plots/configcompare}
 	\caption{Shows mar28 height tests, apr16, may5 cone test
 \label{Fig:} }
 	\end{center}
 \end{figure}
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{reflectometry_plots/configcompare10-150ns}
+	\includegraphics[width =\textwidth]{./reflectometry_plots/configcompare10-150ns}
 	\caption{Shows mar28 height tests, apr16, may5 cone test zoomed on 10-150ns, can see height test changed the delay
 \label{Fig:} }
 	\end{center}
@@ -220,7 +250,7 @@ Using TDR
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{reflectometry_plots/Mar28/s11all-mar28mix17set1}
+	\includegraphics[width =\textwidth]{./reflectometry_plots/Mar28/s11all-mar28mix17set1}
 	\caption{Shows mar28 height tests, apr16, may5 cone test and test not on dish, shows bump is reflection due to surroundings.
 \label{Fig:} }
 	\end{center}
@@ -229,14 +259,13 @@ Using TDR
 May 5th stuff
 @ height 14' 6"
 mountain bumps ~ 60' - 80'
-
 Dish without cone, with screen
 set1- set2: measurements without cone, 2 metal sheets covering the entrace to the dish, covering panel A, B
 set5- set6: measurements with cone, 2 metal sheets covering the entrance to the dish, covering panel A, B
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{reflectometry/May5/set1vsset3zoom}
+	\includegraphics[width =\textwidth]{./reflectometry_plots/May5/set1vsset3zoom}
 	\caption{CONFIG 1
 \label{Fig:} }
 	\end{center}
@@ -245,12 +274,12 @@ set5- set6: measurements with cone, 2 metal sheets covering the entrance to the 
 
 April 16
 @ 14'3" 
-no_cone1 = containing data taken without cone with 1 metal sheet
+$no_cone1$ = containing data taken without cone with 1 metal sheet
 @14'6"
 set3- set4: measuremnets with cone, 1 metal sheet covering the entrance to the dish, covering panel A
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{reflectometry/May5/nocone_vs_set3zoom}
+	\includegraphics[width =\textwidth]{reflectometry_plots/May5/nocone_vs_set3zoom}
 	\caption{CONFIG 2
 \label{Fig:} }
 	\end{center}
@@ -258,7 +287,7 @@ set3- set4: measuremnets with cone, 1 metal sheet covering the entrance to the d
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{reflectometry/May5/S11_1st2nd_refl}
+	\includegraphics[width =\textwidth]{reflectometry_plots/May5/S11_1st2nd_refl}
 	\caption{Shows cone VS no cone, combine 2 plots above, apparent difference cone make, but needs redesign for better backlobe minimization as seen from ~48ns.
 \label{Fig:} }
 	\end{center}
@@ -280,11 +309,30 @@ h3 = 14'0.5"
 \end{figure}
 
 
+
 \subsection{Cone test}
-> show May 5th cone helped on reduce backlobe, see section \ref{label:reflect}
+$\>$ show May 5th cone helped on reduce backlobe, see section \ref{label:reflect}
+
+\subsection{RFI investigation}
+Replacing the passive balun by the PAPER active balun and mating board, $75 \Omega$ cables are fed into the receiver, and the receiver outputs $50\Omega$ through the LMR 400 cables to the Agilent E4407B spectrum analyzer. 401 points, 100MHz - 200MHz, average by xx measurements, sweep time is xx ms, bandwidth resolution is xx kHz.
+
+What are the gains for the balun, the receiver?
+
+\begin{figure}[H]
+	\begin{center}
+	\includegraphics[width =\textwidth]{empty}
+	\caption{SHOW SPECTRUm ANALYZER 100MHz - 200 MHz plot, radio stations, VHF showed up
+\label{Fig:} }
+	\end{center}
+\end{figure}
+
 
 \subsection{How well did we place everything}
->See contruction_journal
+Resurvery the center for hub after telephone poles were stabilized in the ground. The telephone poles have varying diamater and along the length. 
+
+The surrounding posts are not equidistant to the center of the hub; within ~5' between maximum post to center distance and minimum post to center distance.
+
+ 
 
 \begin{itemize}
 \item delay spectrum for configurations
