--- a/hera_dish.tex
+++ b/hera_dish.tex
@@ -165,7 +165,7 @@ The dish structure is made out of schedule 40, white PVCs to minimize the bendin
 
 \section{Reflectometry Test Setup}
 \label{sec:reflect}
-During the contruction process for the HERA prototype, we use Time Domain reflectometry(TDR) to measure the reflections on the dish as a function of time due to impedance mistmatch between the feed electronics and the sky signal. The feed characteristic impedance from the VNA and cable is 50 $\Omega\times 4$ (4:1 passive balun at each dipole) and that of the free space $120\pi\Omega$. Each polarization is fed into one port connected to the VNA which provides a frequency swept signal and inverse Fourier transform is then performed.  In this prototype, the focal length is $4.5$m, thus for 2 reflections, i.e. 4 crossings attenuation is 59.0ns in time domain.
+During the contruction process for the HERA prototype, we use time domain reflectometry(TDR) to measure the reflections on the dish as a function of time due to impedance mistmatch between the feed electronics and the sky signal. The feed characteristic impedance from the VNA and cable is 50 $\Omega\times 4$ (4:1 passive balun at each dipole) and that of the free space $120\pi\Omega$. Each polarization is fed into one port connected to the VNA which provides a frequency swept signal and inverse Fourier transform is then performed.  In this prototype, the focal length is $4.5$m, thus for 2 reflections, i.e. 4 crossings attenuation is 59.0ns in time domain.
 
 
 \subsection{Choice of Hardware}
@@ -267,7 +267,7 @@ What are the gains for the balun, the receiver?
 
 \begin{figure}[H]
 	\begin{center}
-	\includegraphics[width =\textwidth]{empty}
+	\includegraphics[width =\textwidth]{spectra_plots/transit,day,night_match-yaxis.png}
 	\caption{SHOW SPECTRUm ANALYZER 100MHz - 200 MHz plot, radio stations, VHF showed up
 \label{Fig:RFI} }
 	\end{center}
@@ -279,6 +279,48 @@ VHF list, see bmail (FM 100-200MHZ), see if any matches
 Resurvery the center for hub after telephone poles were stabilized in the ground. The telephone poles have varying diamater and along the length. 
 
 The surrounding posts are not equidistant to the center of the hub; within ~5' between maximum post to center distance and minimum post to center distance.
+
+The survey points in the table is defined as:
+Pole 1 = the very first pivot pole, hand drilled hole; 
+Pole 2 = The highest pole near the fence; 
+Pole 3 = the pole closes to the shed, near where our cars are parked
+
+
+\begin{table}[!h]
+\centering
+\begin{tabular}{|c|c|c|} \hline
+
+Point 1 & Point 2 & Distance \\ \hline
+Pole 1 & Pole 2 & 48'$\frac{1}{4}$'' \\ \hline
+Pole 1 & Center & 332'' \\ \hline
+Pole 1 & Pole 3 & 47'$\frac{2}{3}$'' \\ \hline
+
+\end{tabular}
+\caption{The table lists the distances between poles and center before drilling the 2 holes after locating 
+the point of same horion using a theodolite and 2X4s \label{Tab:survey_dist_b4_2holes}.}
+\end{table}
+
+
+
+We measured the pole to pole distance after the center is finalized at the same height on all poles.
+
+\begin{table}[!h]
+\centering
+\begin{tabular}{|c|c|c|} \hline
+
+Point 1 & Point 2 & Distance [Feet] \\ \hline
+Pole 1 & Pole 2 & 47.1 \\ \hline
+Pole 2 & Pole 3 & 47.4 \\ \hline
+Pole 1 & Pole 3 & 46.9 \\ \hline
+
+
+\end{tabular}
+\caption{The table lists the distances between poles after we finalized the center. \label{Tab:dist_p2p}}
+\end{table}
+
+
+
+
 
  
 
